--- a/Proj/Proj.vcxproj
+++ b/Proj/Proj.vcxproj
@@ -116,6 +116,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
+    <ClCompile Include="..\sum.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\sum.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
